<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- General -->
    <string name="app_name">Magnum Hotel</string>
    <string name="action_settings">Settings</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="day">day</string>
    <string name="days">days</string>
    <string name="week">week</string>
    <string name="weeks">weeks</string>

    <!-- Menu -->
    <string name="menu_element_home">Home</string>
    <string name="menu_element_rooms">Rooms</string>
    <string name="menu_element_customers">Customers</string>
    <string name="menu_element_bookings">Bookings</string>
    <string name="menu_element_search">Search</string>

    <string-array name="menu">
        <item>ROOMS MANAGEMENT</item>
        <item>CUSTOMERS MANAGEMENT</item>
        <item>BOOKINGS CONSULATION</item>
        <item>ROOM SEARCH</item>
        <item>STATISTICS</item>
    </string-array>

    <string name="title_activity_room_gestion">Rooms</string>
    <string name="separator">Border</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_activity_detail_room">DetailRoomActivity</string>
    <string name="trash">trash</string>
    <string name="title_activity_new_room">NewRoomActivity</string>

    <!-- Rooms -->
    <string name="text_nothing">There is no room</string>
    <string name="gest_rom">ROOMS MANAGEMENT</string>
    <string name="add_room_title">Add a room</string>
    <string name="update_room_title">Modify a room</string>
    <string name="delete_room_title">Delete a room</string>
    <string name="bed_count">Bed count<font fgcolor="#FFFF0000">*</font></string>
    <string name="room_description">No description</string>
    <string name="room_price">Price<font fgcolor="#FFFF0000">*</font></string>
    <string name="room_number">Room N°<font fgcolor="#FFFF0000">*</font></string>
    <string name="room_number_field">Room Number %1$s</string>
    <string name="room_title_detail">&lt;b>Room Number &lt;/b> %1$s</string>
    <string name="room_capacity_detail">%1$d bed%2$s</string>
    <string name="room_price_detail">%1$s € the night</string>

    <!-- Customers -->
    <string name="add_customer">Add a customer</string>
    <string name="update_customer">Modify a customer</string>
    <string name="delete_customer">Delete the customer %1$s</string>
    <string name="customer_name">Customer\'s lastname<font fgcolor="#FFFF0000">*</font></string>
    <string name="customer_firstName">Customer\'s firstname<font fgcolor="#FFFF0000">*</font></string>
    <string name="customer_email">Email<font fgcolor="#FFFF0000">*</font></string>
    <string name="no_customer">There is no customer</string>
    <string name="delete_customer_message">Are you sure to delete this customer ?</string>

    <!-- Bookings -->
    <string name="title_activity_add_booking">Add a reservation</string>
    <string name="no_bookings">There is no bookings</string>
    <string name="all_bookings">Bookings</string>
    <string name="specify_room">Room attribution</string>
    <string name="arrival_day_title">Arrival day :</string>
    <string name="arrival_day">&lt;b>Start : &lt;/b>%1$s</string>
    <string name="departure_day_title">Departure day :</string>
    <string name="departure_day">&lt;b>End : &lt;/b>%1$s</string>
    <string name="choose_customer">Choose a customer</string>
    <string name="choose_room">Choose a room</string>
    <string name="booking_customer">&lt;b>Customer : &lt;/b>%1$s</string>
    <string name="delete_booking_message">Are you sure to delete that booking ?</string>
    <string name="available_text">Available</string>
    <string name="floor_text">Floor<font fgcolor="#FFFF0000">*</font></string>

    <!-- Error management-->
    <string name="required_field">Required field</string>
    <string name="improper_field">Improper field</string>
    <string name="improper_email">Improper email</string>
    <string name="capacity_room_error">A room can contain only between one or two people.</string>
    <string name="price_error">Invalid price</string>
    <string name="before_date_error">The arrival date must be before departure date</string>
    <string name="before_today_date_error">The arrival date don\'t must be before today</string>
    <string name="equal_date_error">The arrival date must be different than departure date </string>
    <string name="cover_description">Room cover</string>
    <string name="delete_booking_title">Delete the reservation ?</string>
    <string name="unavailable_text">Unavailable</string>
    <string name="search">Search</string>
    <string name="title_activity_modify_booking">Modify a reservation</string>
    <string name="statistics_title">Statistics</string>
    <string name="rooms_total">Rooms count : </string>
    <string name="customers_total">Customers count : </string>
    <string name="booking_total">Nombre de reservation : </string>


</resources>