<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="15dp"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/dark_grey">

    <ImageView
        android:id="@+id/room_cover"
        android:layout_width="130dp"
        android:layout_height="90dp"
        android:layout_marginRight="15dp"
        android:contentDescription="@string/cover_description"
        android:src="@drawable/default_journey"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:gravity="center"
            android:id="@+id/RoomName"
            android:textStyle="bold"
            android:textSize="@dimen/text_size"
            android:textAllCaps="true"
            android:layout_marginBottom="5dp"
            android:text="@string/room_number"
            android:textColor="@color/black_900"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/nbperson"
            android:textColor="@color/black_900"
            android:layout_marginBottom="5dp"
            android:textSize="@dimen/text_size"
            android:text="@string/bed_count" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/priceRoom"
            android:textColor="@color/green_900"
            android:textSize="@dimen/text_size"
            android:text="@string/room_price"
            android:textStyle="bold"
            android:gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/room_availability"
            android:textColor="@color/avalaible"
            android:textSize="@dimen/text_size"
            android:text="@string/available_text"
            android:textStyle="bold"
            android:gravity="center" />


    </LinearLayout>

</LinearLayout>