<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="15dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/dark_grey">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:gravity="center"
            android:id="@+id/customer_lastname"
            android:textStyle="bold"
            android:textSize="@dimen/text_size"
            android:textAllCaps="true"
            android:text="@string/customer_name"
            android:textColor="@color/black_900"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:gravity="center"
            android:id="@+id/customer_firstname"
            android:textStyle="bold"
            android:textSize="@dimen/text_size"
            android:textAllCaps="true"
            android:layout_marginLeft="5dp"
            android:text="@string/customer_firstName"
            android:textColor="@color/black_900"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/customer_email"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size"
        android:text="@string/customer_email"
        android:gravity="center" />

</LinearLayout>