<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:padding="15dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/dark_grey"
    android:layout_marginBottom="10dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:orientation="vertical"
        android:layout_weight="4">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/customer_name"
            android:layout_marginRight="10dp"
            android:textSize="@dimen/text_size"
            android:id="@+id/customer_lastname_reservation" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/room_number"
                android:layout_marginRight="10dp"
                android:textSize="@dimen/text_size"
                android:id="@+id/room_number_reservation"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:visibility="invisible"
                android:id="@+id/room_number" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/arrival_day"
                android:layout_marginRight="10dp"
                android:textSize="@dimen/text_size"
                android:id="@+id/arrival_day_booking"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:visibility="invisible"
                android:id="@+id/arrival_day" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/departure_day"
                android:layout_marginRight="10dp"
                android:textSize="@dimen/text_size"
                android:id="@+id/end_day_booking"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:visibility="invisible"
                android:id="@+id/departure_day" />
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:gravity="right"
        android:layout_gravity="center_vertical|center_horizontal"
        android:orientation="vertical">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:id="@+id/update_booking"
                android:layout_marginRight="10dp"
                android:contentDescription="@string/update"
                android:layout_gravity="center"
                android:onClick="updateBooking"
                android:src="@drawable/settings"/>

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:id="@+id/delete_booking"
                android:layout_gravity="center"
                android:contentDescription="@string/delete"
                android:src="@drawable/delete"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>