<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/title_activity_update_customer"
            android:textAllCaps="true"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginTop="20dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/border"
            android:contentDescription="@string/separator"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"/>

        <TextView
            android:textSize="@dimen/label_size"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/customer_name" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:id="@+id/name"
            android:layout_marginTop="5dp"
            android:background="@drawable/input_style"
            android:textSize="@dimen/input_size"
            android:inputType="text"
            android:padding="5dp" />

        <TextView
            android:textSize="@dimen/label_size"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/customer_firstName"
            android:layout_marginTop="20dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:id="@+id/firstname"
            android:layout_marginTop="5dp"
            android:background="@drawable/input_style"
            android:textSize="@dimen/input_size"
            android:inputType="text"
            android:padding="5dp" />

        <TextView
            android:textSize="@dimen/label_size"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/customer_email"
            android:layout_marginTop="20dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:id="@+id/email"
            android:layout_marginTop="5dp"
            android:background="@drawable/input_style"
            android:textSize="@dimen/input_size"
            android:inputType="phone"
            android:padding="5dp" />

        <Button
            android:id="@+id/update_customer"
            android:text="@string/update"
            android:textColor="@color/white"
            android:background="@drawable/button_add"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="30dp"
            android:paddingLeft="30dp"
            android:textSize="14sp"
            android:layout_marginTop="30dp"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

</ScrollView>