<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="android.project.esgi.fr.magnumhotel.activities.AddRoomActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/room_form_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/add_room_title"
            android:textAllCaps="true"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginTop="20dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/border"
            android:contentDescription="@string/separator"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"/>

        <TextView
            android:textSize="@dimen/label_size"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/room_number" />

        <EditText
            android:id="@+id/edit_title"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/input_style"
            android:textSize="@dimen/input_size"
            android:inputType="number"
            android:padding="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/label_size"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:text="@string/customers_max" />

        <EditText
            android:id="@+id/edit_capacity"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:padding="5dp"
            android:inputType="number"
            android:textSize="@dimen/input_size"
            android:layout_marginTop="5dp"
            android:background="@drawable/input_style"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="@dimen/label_size"
            android:textStyle="bold"
            android:text="@string/room_price" />

        <EditText
            android:id="@+id/edit_price"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:padding="5dp"
            android:inputType="numberDecimal"
            android:textSize="@dimen/input_size"
            android:layout_marginTop="5dp"
            android:background="@drawable/input_style"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="@dimen/label_size"
            android:textStyle="bold"
            android:text="@string/room_description" />

        <EditText
            android:id="@+id/edit_description"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:padding="5dp"
            android:layout_marginTop="5dp"
            android:textSize="@dimen/input_size"
            android:inputType="text"
            android:gravity="top|left"
            android:background="@drawable/input_style" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="@dimen/label_size"
            android:textStyle="bold"
            android:text="Image" />

        <ImageView
            android:id="@+id/room_picture"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@drawable/default_journey"/>

        <Button
            android:id="@+id/submit_room"
            android:text="@string/add"
            android:textColor="@color/white"
            android:background="@drawable/button_add"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="30dp"
            android:paddingLeft="30dp"
            android:textSize="14sp"
            android:layout_marginTop="30dp"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

</ScrollView>
