<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/grey_background">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <TextView
            android:id="@+id/customer_form_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/add_customer"
            android:background="@color/black"
            android:textColor="@color/white"
            android:padding="15dp"
            android:textAllCaps="true"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="@dimen/text_size"
            android:layout_marginBottom="50dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">
            <TextView
                android:textSize="@dimen/label_size"
                android:textStyle="bold"
                android:layout_marginBottom="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/customer_name" />

            <EditText
                android:id="@+id/customer_lastname"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/input_style"
                android:textSize="@dimen/input_size"
                android:inputType="text"
                android:padding="5dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">
            <TextView
                android:textSize="@dimen/label_size"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/customer_firstName"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp"/>

            <EditText
                android:id="@+id/customer_firstname"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/input_style"
                android:textSize="@dimen/input_size"
                android:inputType="text"
                android:padding="5dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">
            <TextView
                android:textSize="@dimen/label_size"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/customer_email"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp"/>

            <EditText
                android:id="@+id/customer_email"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/input_style"
                android:textSize="@dimen/input_size"
                android:inputType="textEmailAddress"
                android:padding="5dp" />
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:id="@+id/submit_customer"
            android:text="@string/add"
            android:textColor="@color/white"
            android:background="@drawable/button_add"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"
            android:textSize="14sp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="40dp"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

</ScrollView>